--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "llm-study",
   "version": "0.1.0",
+  "author": "TBill06",
+  "description": "This is the frontend package.json file for the LLM Study project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
