--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.696.0",
+    "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/lib-dynamodb": "^3.698.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
