--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,11 @@
           "buildCommand": "npm run build"
         }
       }
-    ]
+    ],
+    "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
   }
