--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^1.7.7",
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
+    "react-audio-visualize": "^1.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^4.0.1",
+    "react-voice-visualizer": "^2.0.8",
     "remark-gfm": "^4.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-speech-recognition": "^3.9.6",
     "serve": "^14.2.4",
     "tailwindcss": "^3.4.14"
   }
